@@ -1,3 +1,4 @@
+-    en-GB: Add Bank Holiday for State Funeral of Queen Elizabeth II
 2022.8.2
 -    Add ability to specify a locale via country and language
 
